# reward-lens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Reward_Lens_Intro_Demo.ipynb  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  tests.yml
configs/: base.yaml
configs/experiments/: e01_baseline.yaml  e02_lens_population.yaml  e03_attribution_population.yaml  e04_faithfulness.yaml  e05_circuit_overlap.yaml  e06_hacking_at_scale.yaml  e07_cascade_at_scale.yaml  e08_concept_population.yaml  e09_conflict_population.yaml  e10_distortion_index.yaml  e11_divergence_patching.yaml  e12_sae_feature_decomposition.yaml  e13_scale_study.yaml  e14_cross_architecture.yaml  e15_head_path_patching.yaml  e17_reward_editing.yaml  e18_armorm_multi_objective.yaml
configs/hardware/: h200.yaml
configs/models/: armorm_8b.yaml  internlm_20b.yaml  skywork_8b.yaml  skywork_gemma_27b.yaml  tier_a_full.yaml  tier_b.yaml
docs/: .gitignore  AUTHORING_PROMPT.md  README.md  mkdocs.yml  requirements-docs.txt
docs/content/: caveats.md  cli.md  index.md  migration.md  sciences.md
docs/diagrams/: README.md  _palette.tex  _preamble.tex  build_figures.sh  emit_palette.py  make_bon_figure.py  make_bon_ladder_figure.py  make_empirical_figures.py  palette.json  rl_palette.py
examples/: advanced_analysis.py  cross_model_comparison.py  full_pipeline.py  hacking_deepdive.py  multi_dimension_analysis.py  quick_start.py  sae_analysis.py
experiments/: README.md  __init__.py  __main__.py  config.py  preflight.py  registry.py  report.py  run_all.py  runner.py
experiments/e01_baseline_and_diagnostics/: run.py
experiments/e02_lens_population/: run.py
experiments/e03_attribution_population/: run.py
experiments/e04_faithfulness_population/: run.py
experiments/e05_circuit_overlap/: run.py
experiments/e06_hacking_at_scale/: run.py
experiments/e07_cascade_at_scale/: run.py
experiments/e08_concept_population/: run.py
experiments/e09_conflict_population/: run.py
experiments/e10_distortion_index/: run.py
experiments/e11_divergence_patching/: run.py
experiments/e12_sae_feature_decomposition/: run.py
experiments/e13_scale_study/: run.py
experiments/e14_cross_architecture/: run.py
experiments/e15_head_path_patching/: run.py
experiments/e16_prompt_robustness/: run.py
experiments/e17_reward_editing/: run.py
experiments/e18_armorm_multi_objective/: run.py
experiments/e19_finetune_delta/: run.py
experiments/e20_arch_vs_finetune/: run.py
experiments/utils/: __init__.py  batching.py  datasets.py  diagnostics.py  figures.py  io.py  models.py  parallel.py  shared_cache.py  statistics.py  tiny_model.py
fixtures/e_parity/: extract_golden.py  golden.json
src/reward_lens/: __init__.py  attribution.py  cascade.py  comparison.py  concepts.py  conflict.py  diagnostic_data.py  diagnostic_data_v2.py  distortion.py  divergence_patching.py  hacking.py  lens.py  model.py  patching.py  path_patching.py  sae.py  statistics.py  viz.py
studies/: __init__.py
studies/atlas_meta/: __init__.py  performative.py  universality.py
studies/s02_gauge/: __init__.py  analysis.py
studies/s03_thermo/: __init__.py  analysis.py
studies/s05_capacity/: __init__.py  analysis.py
studies/s06_topology/: __init__.py  analysis.py  hodge.py
studies/s07_embryology/: __init__.py  analysis.py
studies/s08_factorization/: __init__.py  analysis.py
studies/s09_verification/: __init__.py  (+1 more)
tests/: conftest.py  test_analysis.py  test_artifacts_atlas.py  test_artifacts_card.py  test_artifacts_claims.py  test_artifacts_site.py  test_battery.py  test_calibration_gate.py  test_concepts_factory.py  test_core.py  test_core_evidence.py  test_data_e07.py  test_data_lineage.py  test_data_registry.py  test_data_spanmap.py  test_diagnostic_data_v2.py  test_dynamics.py  test_e_parity.py  test_geometry_gauge.py  test_geometry_hessian.py  test_geometry_skew.py  test_geometry_subspace.py  test_indices.py  test_interventions_erase.py  test_interventions_surgery.py  test_loops.py  test_measure_gates.py  test_model_perf.py  test_model_shims.py  test_operate_cli.py  test_organisms_foundry.py  test_organisms_micro.py  test_organisms_scorecard.py  test_patching.py  test_path_patching.py  test_preflight.py  test_runtime_cache_read.py  test_runtime_hvp.py  test_safety_case.py  test_science_atlas_meta.py  (+26 more)
(+290 files in other folders)
