[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reward-lens"
version = "1.0.0"
description = "Mechanistic interpretability toolkit for reward models"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Mohammed Suhail B Nadaf"},
]
keywords = [
    "mechanistic-interpretability",
    "reward-model",
    "RLHF",
    "alignment",
    "sparse-autoencoder",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "datasets>=2.16.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "tqdm>=4.65.0",
    "einops>=0.7.0",
    "jaxtyping>=0.2.25",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
sae = [
    "wandb>=0.16.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
all = ["reward-lens[sae,dev]"]

[project.urls]
Homepage = "https://github.com/suhailnadaf509/reward-lens"
Documentation = "https://reward-lens.readthedocs.io"
Issues = "https://github.com/suhailnadaf509/reward-lens/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# `ruff format` owns code layout, including wrapping long lines. With the
# formatter as the source of truth for line length, E501 would only fire on
# things the formatter deliberately leaves alone — long string literals, URLs,
# and comments — so enforcing it on top of the formatter is pure noise.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test modules deliberately import fixtures/symbols for their side effects and
# re-exercise imports inside test bodies; don't flag those as unused.
"tests/*" = ["F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
